# Django-Task-tracker

./: .gitignore  README.md  pyproject.toml
apps/task_tracker/: admin.py  apps.py  querysets.py  serializers.py  services.py  views.py
apps/task_tracker/migrations/: 0001_initial.py
apps/task_tracker/models/: __init__.py  task.py
config/: settings.py  urls.py
task_tracker/: asgi.py  settings.py  wsgi.py
task_tracker/apps/tasks/: admin.py  apps.py
task_tracker/apps/tasks/models/: __init__.py  task.py
tasks/: models.py
tasks/migrations/: 0001_initial.py
