[tool.poetry]
name = "task_tracker"
version = "0.1.0"
description = ""
authors = ["Artem Savchenko"]
readme = "README.md"
packages = [{ include = "task_tracker" }]

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=6.0.2,<7.0.0"
psycopg = { extras = ["binary"], version = ">=3.3.2,<4.0.0" }
djangorestframework = ">=3.16.1,<4.0.0"
django-cors-headers = ">=4.9.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"